src/main/java/com/example/hunters_league/web/errors/user/IncorrectPasswordException.java
package com.example.hunters_league.web.errors.user;

public class IncorrectPasswordException extends RuntimeException {

    public IncorrectPasswordException(String message) {
        super(message);
    }
}
